# vue-i18n-openai-translate

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  translate.py
src/vue_i18n_openai_translate/: __init__.py  __main__.py  cli.py  translator.py  utils.py
